# goshort

./: .gitignore  Dockerfile  MANIFEST.in  README.md  run.sh  setup.cfg
.github/workflows/: main.yml
goshort/: __init__.py  config.py  db.py  schema.sql  short.py
goshort/static/: style.css
goshort/templates/: base.html
goshort/templates/short/: index.html
